[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["wuddz_m3u"]

[project]
name = "wuddz_m3u"
version = "1.0.1"
description = "A Cool & Simple Python M3U Playlist Checker/Downloader/Maker/Parser & XPSF To M3U Converter."
readme = "README.md"
authors = [
  { name="Wuddz-Devs", email="wuddz_devs@protonmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"
keywords = ["m3u", "playlist", "xspf", "regex", "re", "music", "video", "media"]
classifiers = [
		'License :: OSI Approved :: MIT License',
		'Programming Language :: Python',
		'Programming Language :: Python :: 3.7',
		'Programming Language :: Python :: 3.8',
		'Programming Language :: Python :: 3.9',
		'Programming Language :: Python :: 3.10',
]

[project.scripts]
wudz-m3u = "wuddz_m3u.m3u:cli_main"

[project.urls]
"Homepage" = "https://github.com/wuddz-devs/wuddz-m3u"
